--- a/SurveyEducation/SurveyEducation.csproj
+++ b/SurveyEducation/SurveyEducation.csproj
@@ -143,6 +143,94 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Areas\Admin\Public\assets\css\demo.css" />
+    <Content Include="Areas\Admin\Public\assets\img\avatars\1.png" />
+    <Content Include="Areas\Admin\Public\assets\img\avatars\5.png" />
+    <Content Include="Areas\Admin\Public\assets\img\avatars\6.png" />
+    <Content Include="Areas\Admin\Public\assets\img\avatars\7.png" />
+    <Content Include="Areas\Admin\Public\assets\img\backgrounds\18.jpg" />
+    <Content Include="Areas\Admin\Public\assets\img\elements\1.jpg" />
+    <Content Include="Areas\Admin\Public\assets\img\elements\11.jpg" />
+    <Content Include="Areas\Admin\Public\assets\img\elements\12.jpg" />
+    <Content Include="Areas\Admin\Public\assets\img\elements\13.jpg" />
+    <Content Include="Areas\Admin\Public\assets\img\elements\17.jpg" />
+    <Content Include="Areas\Admin\Public\assets\img\elements\18.jpg" />
+    <Content Include="Areas\Admin\Public\assets\img\elements\19.jpg" />
+    <Content Include="Areas\Admin\Public\assets\img\elements\2.jpg" />
+    <Content Include="Areas\Admin\Public\assets\img\elements\20.jpg" />
+    <Content Include="Areas\Admin\Public\assets\img\elements\3.jpg" />
+    <Content Include="Areas\Admin\Public\assets\img\elements\4.jpg" />
+    <Content Include="Areas\Admin\Public\assets\img\elements\5.jpg" />
+    <Content Include="Areas\Admin\Public\assets\img\elements\7.jpg" />
+    <Content Include="Areas\Admin\Public\assets\img\favicon\favicon.ico" />
+    <Content Include="Areas\Admin\Public\assets\img\icons\brands\asana.png" />
+    <Content Include="Areas\Admin\Public\assets\img\icons\brands\behance.png" />
+    <Content Include="Areas\Admin\Public\assets\img\icons\brands\dribbble.png" />
+    <Content Include="Areas\Admin\Public\assets\img\icons\brands\facebook.png" />
+    <Content Include="Areas\Admin\Public\assets\img\icons\brands\github.png" />
+    <Content Include="Areas\Admin\Public\assets\img\icons\brands\google.png" />
+    <Content Include="Areas\Admin\Public\assets\img\icons\brands\instagram.png" />
+    <Content Include="Areas\Admin\Public\assets\img\icons\brands\mailchimp.png" />
+    <Content Include="Areas\Admin\Public\assets\img\icons\brands\slack.png" />
+    <Content Include="Areas\Admin\Public\assets\img\icons\brands\twitter.png" />
+    <Content Include="Areas\Admin\Public\assets\img\icons\unicons\cc-primary.png" />
+    <Content Include="Areas\Admin\Public\assets\img\icons\unicons\cc-success.png" />
+    <Content Include="Areas\Admin\Public\assets\img\icons\unicons\cc-warning.png" />
+    <Content Include="Areas\Admin\Public\assets\img\icons\unicons\chart-success.png" />
+    <Content Include="Areas\Admin\Public\assets\img\icons\unicons\chart.png" />
+    <Content Include="Areas\Admin\Public\assets\img\icons\unicons\paypal.png" />
+    <Content Include="Areas\Admin\Public\assets\img\icons\unicons\wallet-info.png" />
+    <Content Include="Areas\Admin\Public\assets\img\icons\unicons\wallet.png" />
+    <Content Include="Areas\Admin\Public\assets\img\illustrations\girl-doing-yoga-light.png" />
+    <Content Include="Areas\Admin\Public\assets\img\illustrations\man-with-laptop-light.png" />
+    <Content Include="Areas\Admin\Public\assets\img\illustrations\page-misc-error-light.png" />
+    <Content Include="Areas\Admin\Public\assets\img\layouts\layout-container-light.png" />
+    <Content Include="Areas\Admin\Public\assets\img\layouts\layout-fluid-light.png" />
+    <Content Include="Areas\Admin\Public\assets\img\layouts\layout-without-menu-light.png" />
+    <Content Include="Areas\Admin\Public\assets\img\layouts\layout-without-navbar-light.png" />
+    <Content Include="Areas\Admin\Public\assets\js\config.js" />
+    <Content Include="Areas\Admin\Public\assets\js\dashboards-analytics.js" />
+    <Content Include="Areas\Admin\Public\assets\js\extended-ui-perfect-scrollbar.js" />
+    <Content Include="Areas\Admin\Public\assets\js\form-basic-inputs.js" />
+    <Content Include="Areas\Admin\Public\assets\js\main.js" />
+    <Content Include="Areas\Admin\Public\assets\js\pages-account-settings-account.js" />
+    <Content Include="Areas\Admin\Public\assets\js\ui-modals.js" />
+    <Content Include="Areas\Admin\Public\assets\js\ui-popover.js" />
+    <Content Include="Areas\Admin\Public\assets\js\ui-toasts.js" />
+    <Content Include="Areas\Admin\Public\assets\vendor\css\core.css" />
+    <Content Include="Areas\Admin\Public\assets\vendor\css\pages\page-account-settings.css" />
+    <Content Include="Areas\Admin\Public\assets\vendor\css\pages\page-auth.css" />
+    <Content Include="Areas\Admin\Public\assets\vendor\css\pages\page-icons.css" />
+    <Content Include="Areas\Admin\Public\assets\vendor\css\pages\page-misc.css" />
+    <Content Include="Areas\Admin\Public\assets\vendor\css\theme-default.css" />
+    <Content Include="Areas\Admin\Public\assets\vendor\fonts\boxicons.css" />
+    <Content Include="Areas\Admin\Public\assets\vendor\fonts\boxicons\boxicons.svg" />
+    <Content Include="Areas\Admin\Public\assets\vendor\js\bootstrap.js" />
+    <Content Include="Areas\Admin\Public\assets\vendor\js\helpers.js" />
+    <Content Include="Areas\Admin\Public\assets\vendor\js\menu.js" />
+    <Content Include="Areas\Admin\Public\assets\vendor\libs\apex-charts\apex-charts.css" />
+    <Content Include="Areas\Admin\Public\assets\vendor\libs\apex-charts\apexcharts.js" />
+    <Content Include="Areas\Admin\Public\assets\vendor\libs\highlight\highlight-github.css" />
+    <Content Include="Areas\Admin\Public\assets\vendor\libs\highlight\highlight.css" />
+    <Content Include="Areas\Admin\Public\assets\vendor\libs\highlight\highlight.js" />
+    <Content Include="Areas\Admin\Public\assets\vendor\libs\jquery\jquery.js" />
+    <Content Include="Areas\Admin\Public\assets\vendor\libs\masonry\masonry.js" />
+    <Content Include="Areas\Admin\Public\assets\vendor\libs\perfect-scrollbar\perfect-scrollbar.css" />
+    <Content Include="Areas\Admin\Public\assets\vendor\libs\perfect-scrollbar\perfect-scrollbar.js" />
+    <Content Include="Areas\Admin\Public\assets\vendor\libs\popper\popper.js" />
+    <Content Include="Areas\Admin\Public\js\bootstrap.js" />
+    <Content Include="Areas\Admin\Public\js\helpers.js" />
+    <Content Include="Areas\Admin\Public\js\menu.js" />
+    <Content Include="Areas\Admin\Public\libs\apex-charts\apexcharts.js" />
+    <Content Include="Areas\Admin\Public\libs\highlight\highlight.js" />
+    <Content Include="Areas\Admin\Public\libs\jquery\jquery.js" />
+    <Content Include="Areas\Admin\Public\libs\masonry\masonry.js" />
+    <Content Include="Areas\Admin\Public\libs\perfect-scrollbar\perfect-scrollbar.js" />
+    <Content Include="Areas\Admin\Public\libs\popper\popper.js" />
+    <Content Include="Areas\Admin\Public\tasks\build.js" />
+    <Content Include="Areas\Admin\Public\tasks\prod.js" />
+    <Content Include="bin\SurveyEducation.dll" />
+    <Content Include="bin\SurveyEducation.pdb" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
@@ -156,6 +244,108 @@
     <Content Include="Areas\User\Views\web.config" />
     <Content Include="Areas\Admin\Views\_ViewStart.cshtml" />
     <Content Include="Areas\Admin\Views\Dashboard\Index.cshtml" />
+    <Content Include="Areas\Admin\Public\assets\vendor\fonts\boxicons\boxicons.eot" />
+    <Content Include="Areas\Admin\Public\assets\vendor\fonts\boxicons\boxicons.ttf" />
+    <Content Include="Areas\Admin\Public\assets\vendor\fonts\boxicons\boxicons.woff" />
+    <Content Include="Areas\Admin\Public\assets\vendor\fonts\boxicons\boxicons.woff2" />
+    <Content Include="Areas\Admin\Public\fonts\boxicons.scss" />
+    <Content Include="Areas\Admin\Public\libs\apex-charts\apex-charts.scss" />
+    <Content Include="Areas\Admin\Public\libs\highlight\highlight-github.scss" />
+    <Content Include="Areas\Admin\Public\libs\highlight\highlight.scss" />
+    <Content Include="Areas\Admin\Public\libs\perfect-scrollbar\perfect-scrollbar.scss" />
+    <Content Include="Areas\Admin\Public\scss\core.scss" />
+    <Content Include="Areas\Admin\Public\scss\pages\page-account-settings.scss" />
+    <Content Include="Areas\Admin\Public\scss\pages\page-auth.scss" />
+    <Content Include="Areas\Admin\Public\scss\pages\page-icons.scss" />
+    <Content Include="Areas\Admin\Public\scss\pages\page-misc.scss" />
+    <Content Include="Areas\Admin\Public\scss\theme-default.scss" />
+    <Content Include="Areas\Admin\Public\scss\_bootstrap-extended.scss" />
+    <Content Include="Areas\Admin\Public\scss\_bootstrap-extended\forms\_floating-labels.scss" />
+    <Content Include="Areas\Admin\Public\scss\_bootstrap-extended\forms\_form-control.scss" />
+    <Content Include="Areas\Admin\Public\scss\_bootstrap-extended\forms\_form-range.scss" />
+    <Content Include="Areas\Admin\Public\scss\_bootstrap-extended\forms\_form-select.scss" />
+    <Content Include="Areas\Admin\Public\scss\_bootstrap-extended\forms\_input-group.scss" />
+    <Content Include="Areas\Admin\Public\scss\_bootstrap-extended\forms\_labels.scss" />
+    <Content Include="Areas\Admin\Public\scss\_bootstrap-extended\forms\_validation.scss" />
+    <Content Include="Areas\Admin\Public\scss\_bootstrap-extended\mixins\_alert.scss" />
+    <Content Include="Areas\Admin\Public\scss\_bootstrap-extended\mixins\_badge.scss" />
+    <Content Include="Areas\Admin\Public\scss\_bootstrap-extended\mixins\_buttons.scss" />
+    <Content Include="Areas\Admin\Public\scss\_bootstrap-extended\mixins\_caret.scss" />
+    <Content Include="Areas\Admin\Public\scss\_bootstrap-extended\mixins\_dropdown.scss" />
+    <Content Include="Areas\Admin\Public\scss\_bootstrap-extended\mixins\_forms.scss" />
+    <Content Include="Areas\Admin\Public\scss\_bootstrap-extended\mixins\_list-group.scss" />
+    <Content Include="Areas\Admin\Public\scss\_bootstrap-extended\mixins\_misc.scss" />
+    <Content Include="Areas\Admin\Public\scss\_bootstrap-extended\mixins\_navs.scss" />
+    <Content Include="Areas\Admin\Public\scss\_bootstrap-extended\mixins\_pagination.scss" />
+    <Content Include="Areas\Admin\Public\scss\_bootstrap-extended\mixins\_progress.scss" />
+    <Content Include="Areas\Admin\Public\scss\_bootstrap-extended\mixins\_table-variants.scss" />
+    <Content Include="Areas\Admin\Public\scss\_bootstrap-extended\mixins\_toasts.scss" />
+    <Content Include="Areas\Admin\Public\scss\_bootstrap-extended\_accordion.scss" />
+    <Content Include="Areas\Admin\Public\scss\_bootstrap-extended\_alert.scss" />
+    <Content Include="Areas\Admin\Public\scss\_bootstrap-extended\_badge.scss" />
+    <Content Include="Areas\Admin\Public\scss\_bootstrap-extended\_breadcrumb.scss" />
+    <Content Include="Areas\Admin\Public\scss\_bootstrap-extended\_button-group.scss" />
+    <Content Include="Areas\Admin\Public\scss\_bootstrap-extended\_buttons.scss" />
+    <Content Include="Areas\Admin\Public\scss\_bootstrap-extended\_card.scss" />
+    <Content Include="Areas\Admin\Public\scss\_bootstrap-extended\_carousel.scss" />
+    <Content Include="Areas\Admin\Public\scss\_bootstrap-extended\_close.scss" />
+    <Content Include="Areas\Admin\Public\scss\_bootstrap-extended\_dropdown.scss" />
+    <Content Include="Areas\Admin\Public\scss\_bootstrap-extended\_forms.scss" />
+    <Content Include="Areas\Admin\Public\scss\_bootstrap-extended\_functions.scss" />
+    <Content Include="Areas\Admin\Public\scss\_bootstrap-extended\_include.scss" />
+    <Content Include="Areas\Admin\Public\scss\_bootstrap-extended\_list-group.scss" />
+    <Content Include="Areas\Admin\Public\scss\_bootstrap-extended\_mixins.scss" />
+    <Content Include="Areas\Admin\Public\scss\_bootstrap-extended\_modal.scss" />
+    <Content Include="Areas\Admin\Public\scss\_bootstrap-extended\_nav.scss" />
+    <Content Include="Areas\Admin\Public\scss\_bootstrap-extended\_navbar.scss" />
+    <Content Include="Areas\Admin\Public\scss\_bootstrap-extended\_offcanvas.scss" />
+    <Content Include="Areas\Admin\Public\scss\_bootstrap-extended\_pagination.scss" />
+    <Content Include="Areas\Admin\Public\scss\_bootstrap-extended\_popover.scss" />
+    <Content Include="Areas\Admin\Public\scss\_bootstrap-extended\_progress.scss" />
+    <Content Include="Areas\Admin\Public\scss\_bootstrap-extended\_reboot.scss" />
+    <Content Include="Areas\Admin\Public\scss\_bootstrap-extended\_root.scss" />
+    <Content Include="Areas\Admin\Public\scss\_bootstrap-extended\_spinners.scss" />
+    <Content Include="Areas\Admin\Public\scss\_bootstrap-extended\_tables.scss" />
+    <Content Include="Areas\Admin\Public\scss\_bootstrap-extended\_toasts.scss" />
+    <Content Include="Areas\Admin\Public\scss\_bootstrap-extended\_tooltip.scss" />
+    <Content Include="Areas\Admin\Public\scss\_bootstrap-extended\_type.scss" />
+    <Content Include="Areas\Admin\Public\scss\_bootstrap-extended\_utilities-ltr.scss" />
+    <Content Include="Areas\Admin\Public\scss\_bootstrap-extended\_utilities.scss" />
+    <Content Include="Areas\Admin\Public\scss\_bootstrap-extended\_variables.scss" />
+    <Content Include="Areas\Admin\Public\scss\_bootstrap.scss" />
+    <Content Include="Areas\Admin\Public\scss\_colors.scss" />
+    <Content Include="Areas\Admin\Public\scss\_components.scss" />
+    <Content Include="Areas\Admin\Public\scss\_components\mixins\_app-brand.scss" />
+    <Content Include="Areas\Admin\Public\scss\_components\mixins\_avatar.scss" />
+    <Content Include="Areas\Admin\Public\scss\_components\mixins\_footer.scss" />
+    <Content Include="Areas\Admin\Public\scss\_components\mixins\_menu.scss" />
+    <Content Include="Areas\Admin\Public\scss\_components\mixins\_misc.scss" />
+    <Content Include="Areas\Admin\Public\scss\_components\mixins\_navbar.scss" />
+    <Content Include="Areas\Admin\Public\scss\_components\mixins\_text-divider.scss" />
+    <Content Include="Areas\Admin\Public\scss\_components\_app-brand.scss" />
+    <Content Include="Areas\Admin\Public\scss\_components\_avatar.scss" />
+    <Content Include="Areas\Admin\Public\scss\_components\_base.scss" />
+    <Content Include="Areas\Admin\Public\scss\_components\_common.scss" />
+    <Content Include="Areas\Admin\Public\scss\_components\_footer.scss" />
+    <Content Include="Areas\Admin\Public\scss\_components\_include.scss" />
+    <Content Include="Areas\Admin\Public\scss\_components\_layout.scss" />
+    <Content Include="Areas\Admin\Public\scss\_components\_menu.scss" />
+    <Content Include="Areas\Admin\Public\scss\_components\_mixins.scss" />
+    <Content Include="Areas\Admin\Public\scss\_components\_text-divider.scss" />
+    <Content Include="Areas\Admin\Public\scss\_components\_variables.scss" />
+    <Content Include="Areas\Admin\Public\scss\_custom-variables\_bootstrap-extended.scss" />
+    <Content Include="Areas\Admin\Public\scss\_custom-variables\_components.scss" />
+    <Content Include="Areas\Admin\Public\scss\_custom-variables\_libs.scss" />
+    <Content Include="Areas\Admin\Public\scss\_custom-variables\_pages.scss" />
+    <Content Include="Areas\Admin\Public\scss\_custom-variables\_support.scss" />
+    <Content Include="Areas\Admin\Public\scss\_theme\_common.scss" />
+    <Content Include="Areas\Admin\Public\scss\_theme\_theme.scss" />
+    <Content Include="obj\Debug\DesignTimeResolveAssemblyReferencesInput.cache" />
+    <Content Include="Areas\Admin\Views\Shared\_Footer.cshtml" />
+    <Content Include="Areas\Admin\Views\Shared\_Head.cshtml" />
+    <Content Include="Areas\Admin\Views\Shared\_Layout.cshtml" />
+    <Content Include="Areas\Admin\Views\Shared\_Menu.cshtml" />
+    <Content Include="Areas\Admin\Views\Shared\_Script.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -185,11 +375,11 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Areas\Admin\Data\" />
-    <Folder Include="Areas\Admin\Views\Shared\" />
     <Folder Include="Areas\User\Controllers\" />
     <Folder Include="Areas\User\Data\" />
     <Folder Include="Areas\User\Views\Shared\" />
     <Folder Include="Libs\" />
+    <Folder Include="obj\Debug\TempPE\" />
     <Folder Include="ViewModels\" />
   </ItemGroup>
   <ItemGroup>
