--- a/SurveyEducation/SurveyEducation.csproj
+++ b/SurveyEducation/SurveyEducation.csproj
@@ -136,6 +136,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Admin.cs" />
     <Compile Include="Models\Answer.cs" />
     <Compile Include="Models\FacultyStaff.cs" />
