--- a/SurveyEducation/Web.config
+++ b/SurveyEducation/Web.config
@@ -9,8 +9,11 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
 	<connectionStrings>
-		<add name="ConnectionString" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=SurveyEducation;Integrated Security=True" providerName="System.Data.SqlClient" />
-	</connectionStrings>
+  <add name="ConnectionString" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=SurveyEducation;Integrated Security=True"
+   providerName="System.Data.SqlClient" />
+  <add name="SurveyEducationContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=SurveyEducationContext-20220413143240; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|SurveyEducationContext-20220413143240.mdf"
+   providerName="System.Data.SqlClient" />
+ </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
