--- a/SurveyEducation/SurveyEducation.csproj
+++ b/SurveyEducation/SurveyEducation.csproj
@@ -52,6 +52,12 @@
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="PagedList, Version=1.17.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\PagedList.1.17.0.0\lib\net40\PagedList.dll</HintPath>
+    </Reference>
+    <Reference Include="PagedList.Mvc, Version=4.5.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\PagedList.Mvc.4.5.0.0\lib\net40\PagedList.Mvc.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -128,6 +134,8 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
     <Compile Include="Areas\Admin\Controllers\AccountController.cs" />
+    <Compile Include="Areas\Admin\Controllers\AdminModelsController.cs" />
+    <Compile Include="Areas\Admin\Controllers\AnswersController.cs" />
     <Compile Include="Areas\Admin\Controllers\DashboardController.cs" />
     <Compile Include="Areas\Admin\Controllers\SurveyController.cs" />
     <Compile Include="Areas\User\UserAreaRegistration.cs" />
@@ -136,12 +144,12 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202204140230273_InitData.cs" />
-    <Compile Include="Migrations\202204140230273_InitData.Designer.cs">
-      <DependentUpon>202204140230273_InitData.cs</DependentUpon>
+    <Compile Include="Migrations\202204140956466_InitData.cs" />
+    <Compile Include="Migrations\202204140956466_InitData.Designer.cs">
+      <DependentUpon>202204140956466_InitData.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
-    <Compile Include="Models\Admin.cs" />
+    <Compile Include="Models\AdminModel.cs" />
     <Compile Include="Models\Answer.cs" />
     <Compile Include="Models\FacultyStaff.cs" />
     <Compile Include="Models\Question.cs" />
@@ -250,6 +258,7 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\PagedList.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
@@ -365,6 +374,15 @@
     <Content Include="Areas\Admin\Views\Account\Create.cshtml" />
     <Content Include="Areas\Admin\Views\Shared\_Content.cshtml" />
     <Content Include="Areas\Admin\Views\Survey\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Answers\Delete.cshtml" />
+    <Content Include="Areas\Admin\Views\Answers\Details.cshtml" />
+    <Content Include="Areas\Admin\Views\Answers\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\Answers\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\AdminModels\Create.cshtml" />
+    <Content Include="Areas\Admin\Views\AdminModels\Delete.cshtml" />
+    <Content Include="Areas\Admin\Views\AdminModels\Details.cshtml" />
+    <Content Include="Areas\Admin\Views\AdminModels\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\AdminModels\Index.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -411,8 +429,8 @@
     <Content Include="Scripts\jquery-3.4.1.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202204140230273_InitData.resx">
-      <DependentUpon>202204140230273_InitData.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202204140956466_InitData.resx">
+      <DependentUpon>202204140956466_InitData.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
