--- a/SurveyEducation/SurveyEducation.csproj
+++ b/SurveyEducation/SurveyEducation.csproj
@@ -138,21 +138,11 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
-    <Compile Include="Models\Admin.cs" />
-    <Compile Include="Models\Answer.cs" />
-    <Compile Include="Models\FacultyStaff.cs" />
     <Compile Include="Models\Question.cs" />
     <Compile Include="Models\Survey.cs" />
-    <Compile Include="Models\Student.cs" />
-    <Compile Include="Models\UserQuestion.cs" />
+    <Compile Include="Models\SurveyHistory.cs" />
+    <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ViewModels\AdminViewModel.cs" />
-    <Compile Include="ViewModels\AnswerViewModel.cs" />
-    <Compile Include="ViewModels\FacultyStaffViewModel.cs" />
-    <Compile Include="ViewModels\QuestionViewModel.cs" />
-    <Compile Include="ViewModels\StudentViewModel.cs" />
-    <Compile Include="ViewModels\SurveyViewModel.cs" />
-    <Compile Include="ViewModels\UserQuestionViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\Admin\Public\assets\css\demo.css" />
@@ -362,6 +352,7 @@
     <Content Include="Areas\Admin\Views\Account\Create.cshtml" />
     <Content Include="Areas\Admin\Views\Shared\_Content.cshtml" />
     <Content Include="Areas\Admin\Views\Survey\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Survey\Create3.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -397,6 +388,7 @@
     <Folder Include="Areas\User\Views\Shared\" />
     <Folder Include="Libs\" />
     <Folder Include="obj\Debug\TempPE\" />
+    <Folder Include="ViewModels\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.min.css.map" />
